Some styling fixes for spacings of form elements

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -36,10 +36,10 @@ html, body {
   max-width: 1200px;
   margin: 24px auto;
   width: 90%;
-  padding: 0 0 20px 0;
+  padding: 10px;
 
   &:last-child {
-    margin-bottom: 100px;
+    //margin-bottom: 100px;
   }
 }
 
